--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
- <html lang="en"> 
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Document</title>
+    <title>Alura Plus DiogãoFR</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-</head> 
+</head>
 <body>
-<header class="cabecalho">
-    <img src="./img/alurastart logo 1 (4).png" alt="logo alurastart" >
-    <ul class="cabecalho-lista-item"> 
-        <li class="cabecalho-lista-item">Estudante</li>
-        <li class="cabecalho-lista-item">Escola</li> 
-    </ul>
-</header>
-</section class="escola">
-            <img class="escola-imagem" src="./img/Formula-bro.png" alt="professora no quadro">
+    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+
 </body>
+
 </html>
- <section class="escola">
-    <div class="escola-conteudo">
-        <h2 class=”escola-titulo”>Sobre a Escola</h2>
-         <p class=”escola-texto-um”>A escola Alura foi fundada em 2010 com o objetivo de
-ensinar
-     Pensamento Computacional através da Programação. </p>
-     <p class=”escola-texto-dois”>A turma mais famosa é a Segunda Série A. Uma turma
-diversa
-      e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes
-resultados!</p>
-</div>
